--- a/style.css
+++ b/style.css
@@ -110,3 +110,61 @@ nav ul li{
     margin-left: 18px;
     border-radius: 5px;
 }
+.about {
+    background-color: #FFF8F3;
+    width: 670px;
+    margin: auto;
+    padding: 100px;
+    margin-top: 80px;
+    border-radius: 8px;
+}
+.about-innar h4 {
+    text-align: center;
+    font-size: 29px;
+    text-transform: capitalize;
+    margin-bottom: 21px;
+}
+.about-innar p {
+    text-align: center;
+    line-height: 26px;
+}
+.bo-about {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    margin-top: 28px;
+}
+.what{
+    padding: 100px 0;
+
+}
+.what-top{
+
+}
+.what-top h3 {
+    text-align: center;
+    font-size: 36px;
+    text-transform: capitalize;
+    margin-bottom: 23px;
+}
+.what-top p {
+    text-align: center;
+    padding: 0px 162px;
+    line-height: 25px;
+    font-size: 18px;
+}
+.what-main {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 60px 100px;
+    gap: 33px;
+}
+.what-box img {
+    margin-bottom: 10px;
+}
+.what-box {
+    margin-bottom: 6px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    padding: 30px;
+    border-radius: 5px;
+}
